--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension XML::Smart.
 
+1.3  Mon May 30 02:03:00 2003
+    - Can build/load Wild XML data (like HTML).
+    - New methods: null(), key(), i().
+    - Fixed select search with multiple values. And added support to search in keys, not only ARRAY ref.
+    - Accept a XML::Smart object as a value in the tree. When parsing to generate the data, the XML::Smart->tree is got.
+    - Upgrade to Object::MultiType 0.2, due a bug when using XML::Smart as a boolean.
+
 1.2  Mon May 30 02:03:00 2003
     - Added cut_root(), base(), back(), copy() and data_pointer() methods.
     - New resource "return format".
