--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 #########################
-# XML/SMART VERSION 1.2 #
+# XML/SMART VERSION 1.4 #
 #########################
 
 XML::Smart - A Smart, easy and powerful way to access/create XML files/data.
@@ -43,8 +43,8 @@ To install this module type the following:
 # DEPENDENCIES #
 ################
 
-Object::MultiType -> I made this module specially for XML::Smart,
-                     but can be used in others too ;-P.
+Object::MultiType 0.3 -> I made this module specially for XML::Smart,
+                         but can be used in others too ;-P.                     
 
 XML::Parser (OPTIONAL)
 
