Import of GMPASSOS/XML-Smart-1.5.1 from CPAN.
gitpan-cpan-distribution: XML-Smart
gitpan-cpan-version:      1.5.1
gitpan-cpan-path:         GMPASSOS/XML-Smart-1.5.1.tar.gz
gitpan-cpan-author:       GMPASSOS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension XML::Smart.
 
+
+1.6 2004-02-05
+    - Fixed simple bug when XML::Smart object used on recursions/loops.
+
+
 1.5 2004-01-15
     - Added method aliase tree_pointer().
     - Added method root().
