--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-#########################
-# XML/SMART VERSION 1.4 #
-#########################
+##############
+# XML::SMART #
+##############
 
 XML::Smart - A Smart, easy and powerful way to access/create XML files/data.
 
