Import of GMPASSOS/XML-Smart-1.5.3 from CPAN.
gitpan-cpan-distribution: XML-Smart
gitpan-cpan-version:      1.5.3
gitpan-cpan-path:         GMPASSOS/XML-Smart-1.5.3.tar.gz
gitpan-cpan-author:       GMPASSOS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension XML::Smart.
 
 
+1.5.3 2004-02-23
+    - Just minor changes and fixes.
+
 1.5.2 2004-02-15
     - Fixed some minor bug on PUSH and UNSHIFT.
     - Added support for multiple nodes for the same tag and interpolation of different nodes.
