--- a/Changes
+++ b/Changes
@@ -1,8 +1,13 @@
 Revision history for Perl extension XML::Smart.
 
 
+1.5.4 2004-02-23
+    - Added autoload of parts of the module, to save load memory.
+
+
 1.5.3 2004-02-23
     - Just minor changes and fixes.
+
 
 1.5.2 2004-02-15
     - Fixed some minor bug on PUSH and UNSHIFT.
