--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension XML::Smart.
 
+1.5.6 2004-03-23
+    - Fixed minor mistake on set_cdata() method and cdata id inside data().
+
+
 1.5.5 2004-03-23
     - Added methods set_auto() , set_auto_node(), set_binary(), set_cdata().
     - Fixed bug on copy().
