--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension XML::Smart.
 
+
+1.6 2004-5-26
+    - Added support to DTD: new method apply_dtd().
+    - Fixed bug when values are XML::Smart objects and the key order.
+    - Fixed bug with creation of null trees and orders of already existing keys.
+    - Added FAQ and Tutorial documents for XML::Smart.
+
+
 1.6 2004-5-9
     - Fixed minor bug with search of attributes when they are as contents.
 
@@ -30,7 +38,7 @@ Revision history for Perl extension XML::Smart.
 1.5.5 2004-03-23
     - Added methods set_auto() , set_auto_node(), set_binary(), set_cdata().
     - Fixed bug on copy().
-    - Fixed bug with date() when CONTENT key is found and should be CDATA or BINARY.
+    - Fixed bug with data() when CONTENT key is found and should be CDATA or BINARY.
 
 
 1.5.4 2004-02-23
