--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Perl extension XML::Smart.
 
 
+1.6.7 2004-7-19
+    - Fixed minor bug with internal flag {null}. use as a boolean, and not as defined {null} changed.
+    - Fixed minor bug with data_pointer() and root element name.
+
+
 1.6.6 2004-7-8
     - Fixed minor bug on content order for multiple contents and null contents chunks.
     - Fixed wrong creation of key in the tree when using is_node() for null pointers.
