Import of GMPASSOS/XML-Smart-1.6.9 from CPAN.
gitpan-cpan-distribution: XML-Smart
gitpan-cpan-version:      1.6.9
gitpan-cpan-path:         GMPASSOS/XML-Smart-1.6.9.tar.gz
gitpan-cpan-author:       GMPASSOS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Perl extension XML::Smart.
 
 
+1.6.9 2004-9-21
+    - dump_tree() and similars methods will dump hash keys sorted now.
+    - Hooks on_start, on_char and on_end for the parser will receive the parser object too.
+
+
 1.6.8 2004-8-3
     - Fixed minor bug for order of keys and new multiple elements.
     - Fixed assigment of content with the method content() for new trees.
