--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension XML::Smart.
 
 
+1.79 2013-10-04
+    - Added t/make_scalar.t for testing of scalar convert (Bug:89228)
+    - Fixed Bug:89228 (Modified Smart.pm)
+
 1.78 2013-9-12
     - Fixed hash randomization bug Id:84929
     - lib/XML/Smart.pm:  Formatting update, no changes to code. 
